Bot description: Fix displaying bot description in empty chats Center align Fix appearing animation

--- a/src/scss/partials/_chatBubble.scss
+++ b/src/scss/partials/_chatBubble.scss
@@ -725,6 +725,8 @@ $bubble-margin: .25rem;
     order: -1;
     margin-top: .5rem;
     justify-content: center;
+    flex: 1 1 auto;
+    align-items: center;
 
     .time {
       display: none !important;
